fix update user by id